copasi/function/CEvaluationParser.output
State 46 conflicts: 2 shift/reduce
State 99 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce


Grammar

    0 $accept: result $end

    1 result: exp
    2       | bool

    3 d_or_b: call
    4       | TOKEN_VARIABLE
    5       | TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
    6       | TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE

    7 exp: TOKEN_NUMBER
    8    | d_or_b
    9    | exp TOKEN_OPERATOR_PLUS exp
   10    | exp TOKEN_OPERATOR_MODULUS exp
   11    | exp TOKEN_OPERATOR_REMAINDER exp
   12    | exp TOKEN_OPERATOR_MULTIPLY exp
   13    | exp TOKEN_OPERATOR_POWER exp
   14    | TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_CLOSE
   15    | TOKEN_FUNCTION TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_CLOSE
   16    | TOKEN_FUNCTION_2 TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   17    | TOKEN_SIGN exp
   18    | TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   19    | TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE

   20 bool: TOKEN_LOGICAL_VALUE
   21     | TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   22     | TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   23     | TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
   24     | TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   25     | TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   26     | TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
   27     | exp TOKEN_LOGICAL_EQ exp
   28     | bool TOKEN_LOGICAL_EQ bool
   29     | exp TOKEN_LOGICAL_NE exp
   30     | bool TOKEN_LOGICAL_NE bool
   31     | exp TOKEN_LOGICAL_GE exp
   32     | exp TOKEN_LOGICAL_GT exp
   33     | exp TOKEN_LOGICAL_LE exp
   34     | exp TOKEN_LOGICAL_LT exp
   35     | bool TOKEN_LOGICAL_OR bool
   36     | bool TOKEN_LOGICAL_XOR bool
   37     | bool TOKEN_LOGICAL_AND bool
   38     | TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_CLOSE
   39     | TOKEN_LOGICAL_NOT bool

   40 vector: TOKEN_STRUCTURE_VECTOR_OPEN TOKEN_STRUCTURE_VECTOR_CLOSE
   41       | vstart TOKEN_STRUCTURE_VECTOR_CLOSE

   42 vstart: TOKEN_STRUCTURE_VECTOR_OPEN exp
   43       | TOKEN_STRUCTURE_VECTOR_OPEN vector
   44       | vstart TOKEN_STRUCTURE_COMMA exp
   45       | vstart TOKEN_STRUCTURE_COMMA vector

   46 call: TOKEN_CALL TOKEN_STRUCTURE_CLOSE
   47     | cstart d_or_b TOKEN_STRUCTURE_CLOSE
   48     | cstart exp TOKEN_STRUCTURE_CLOSE
   49     | cstart bool TOKEN_STRUCTURE_CLOSE
   50     | cstart vector TOKEN_STRUCTURE_CLOSE

   51 cstart: TOKEN_CALL
   52       | cstart d_or_b TOKEN_STRUCTURE_COMMA
   53       | cstart exp TOKEN_STRUCTURE_COMMA
   54       | cstart bool TOKEN_STRUCTURE_COMMA
   55       | cstart vector TOKEN_STRUCTURE_COMMA


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_NUMBER (258) 7
TOKEN_VARIABLE (259) 4
TOKEN_CALL (260) 46 51
TOKEN_FUNCTION (261) 15
TOKEN_FUNCTION_2 (262) 16
TOKEN_SIGN (263) 17
TOKEN_OPERATOR_POWER (264) 13
TOKEN_OPERATOR_MULTIPLY (265) 12
TOKEN_OPERATOR_MODULUS (266) 10
TOKEN_OPERATOR_REMAINDER (267) 11
TOKEN_OPERATOR_PLUS (268) 9
TOKEN_LOGICAL_CHOICE (269) 5 6 18 19 21 22 23 24 25 26
TOKEN_LOGICAL_VALUE (270) 20
TOKEN_LOGICAL_NOT (271) 39
TOKEN_LOGICAL_OR (272) 35
TOKEN_LOGICAL_XOR (273) 36
TOKEN_LOGICAL_AND (274) 37
TOKEN_LOGICAL_EQ (275) 27 28
TOKEN_LOGICAL_NE (276) 29 30
TOKEN_LOGICAL_GT (277) 32
TOKEN_LOGICAL_GE (278) 31
TOKEN_LOGICAL_LT (279) 34
TOKEN_LOGICAL_LE (280) 33
TOKEN_STRUCTURE_OPEN (281) 5 6 14 15 16 18 19 21 22 23 24 25 26 38
TOKEN_STRUCTURE_VECTOR_OPEN (282) 40 42 43
TOKEN_STRUCTURE_COMMA (283) 5 6 16 18 19 21 22 23 24 25 26 44 45 52
    53 54 55
TOKEN_STRUCTURE_CLOSE (284) 5 6 14 15 16 18 19 21 22 23 24 25 26 38
    46 47 48 49 50
TOKEN_STRUCTURE_VECTOR_CLOSE (285) 40 41


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
result (32)
    on left: 1 2, on right: 0
d_or_b (33)
    on left: 3 4 5 6, on right: 5 6 8 19 22 23 24 25 26 47 52
exp (34)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19, on right: 1 9 10
    11 12 13 14 15 16 17 18 19 27 29 31 32 33 34 42 44 48 53
bool (35)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39, on right: 2 5 18 21 22 23 24 25 26 28 30 35 36 37 38 39
    49 54
vector (36)
    on left: 40 41, on right: 43 45 50 55
vstart (37)
    on left: 42 43 44 45, on right: 41 44 45
call (38)
    on left: 46 47 48 49 50, on right: 3
cstart (39)
    on left: 51 52 53 54 55, on right: 47 48 49 50 52 53 54 55


State 0

    0 $accept: . result $end
    1 result: . exp
    2       | . bool
    3 d_or_b: . call
    4       | . TOKEN_VARIABLE
    5       | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
    6       | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
    7 exp: . TOKEN_NUMBER
    8    | . d_or_b
    9    | . exp TOKEN_OPERATOR_PLUS exp
   10    | . exp TOKEN_OPERATOR_MODULUS exp
   11    | . exp TOKEN_OPERATOR_REMAINDER exp
   12    | . exp TOKEN_OPERATOR_MULTIPLY exp
   13    | . exp TOKEN_OPERATOR_POWER exp
   14    | . TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_CLOSE
   15    | . TOKEN_FUNCTION TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_CLOSE
   16    | . TOKEN_FUNCTION_2 TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   17    | . TOKEN_SIGN exp
   18    | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   19    | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   20 bool: . TOKEN_LOGICAL_VALUE
   21     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   22     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   23     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
   24     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   25     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   26     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
   27     | . exp TOKEN_LOGICAL_EQ exp
   28     | . bool TOKEN_LOGICAL_EQ bool
   29     | . exp TOKEN_LOGICAL_NE exp
   30     | . bool TOKEN_LOGICAL_NE bool
   31     | . exp TOKEN_LOGICAL_GE exp
   32     | . exp TOKEN_LOGICAL_GT exp
   33     | . exp TOKEN_LOGICAL_LE exp
   34     | . exp TOKEN_LOGICAL_LT exp
   35     | . bool TOKEN_LOGICAL_OR bool
   36     | . bool TOKEN_LOGICAL_XOR bool
   37     | . bool TOKEN_LOGICAL_AND bool
   38     | . TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_CLOSE
   39     | . TOKEN_LOGICAL_NOT bool
   46 call: . TOKEN_CALL TOKEN_STRUCTURE_CLOSE
   47     | . cstart d_or_b TOKEN_STRUCTURE_CLOSE
   48     | . cstart exp TOKEN_STRUCTURE_CLOSE
   49     | . cstart bool TOKEN_STRUCTURE_CLOSE
   50     | . cstart vector TOKEN_STRUCTURE_CLOSE
   51 cstart: . TOKEN_CALL
   52       | . cstart d_or_b TOKEN_STRUCTURE_COMMA
   53       | . cstart exp TOKEN_STRUCTURE_COMMA
   54       | . cstart bool TOKEN_STRUCTURE_COMMA
   55       | . cstart vector TOKEN_STRUCTURE_COMMA

    TOKEN_NUMBER          shift, and go to state 1
    TOKEN_VARIABLE        shift, and go to state 2
    TOKEN_CALL            shift, and go to state 3
    TOKEN_FUNCTION        shift, and go to state 4
    TOKEN_FUNCTION_2      shift, and go to state 5
    TOKEN_SIGN            shift, and go to state 6
    TOKEN_LOGICAL_CHOICE  shift, and go to state 7
    TOKEN_LOGICAL_VALUE   shift, and go to state 8
    TOKEN_LOGICAL_NOT     shift, and go to state 9
    TOKEN_STRUCTURE_OPEN  shift, and go to state 10

    result  go to state 11
    d_or_b  go to state 12
    exp     go to state 13
    bool    go to state 14
    call    go to state 15
    cstart  go to state 16


State 1

    7 exp: TOKEN_NUMBER .

    $default  reduce using rule 7 (exp)


State 2

    4 d_or_b: TOKEN_VARIABLE .

    $default  reduce using rule 4 (d_or_b)


State 3

   46 call: TOKEN_CALL . TOKEN_STRUCTURE_CLOSE
   51 cstart: TOKEN_CALL .  [TOKEN_NUMBER, TOKEN_VARIABLE, TOKEN_CALL, TOKEN_FUNCTION, TOKEN_FUNCTION_2, TOKEN_SIGN, TOKEN_LOGICAL_CHOICE, TOKEN_LOGICAL_VALUE, TOKEN_LOGICAL_NOT, TOKEN_STRUCTURE_OPEN, TOKEN_STRUCTURE_VECTOR_OPEN]

    TOKEN_STRUCTURE_CLOSE  shift, and go to state 17

    $default  reduce using rule 51 (cstart)


State 4

   15 exp: TOKEN_FUNCTION . TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_CLOSE

    TOKEN_STRUCTURE_OPEN  shift, and go to state 18


State 5

   16 exp: TOKEN_FUNCTION_2 . TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE

    TOKEN_STRUCTURE_OPEN  shift, and go to state 19


State 6

    3 d_or_b: . call
    4       | . TOKEN_VARIABLE
    5       | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
    6       | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
    7 exp: . TOKEN_NUMBER
    8    | . d_or_b
    9    | . exp TOKEN_OPERATOR_PLUS exp
   10    | . exp TOKEN_OPERATOR_MODULUS exp
   11    | . exp TOKEN_OPERATOR_REMAINDER exp
   12    | . exp TOKEN_OPERATOR_MULTIPLY exp
   13    | . exp TOKEN_OPERATOR_POWER exp
   14    | . TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_CLOSE
   15    | . TOKEN_FUNCTION TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_CLOSE
   16    | . TOKEN_FUNCTION_2 TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   17    | . TOKEN_SIGN exp
   17    | TOKEN_SIGN . exp
   18    | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   19    | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   46 call: . TOKEN_CALL TOKEN_STRUCTURE_CLOSE
   47     | . cstart d_or_b TOKEN_STRUCTURE_CLOSE
   48     | . cstart exp TOKEN_STRUCTURE_CLOSE
   49     | . cstart bool TOKEN_STRUCTURE_CLOSE
   50     | . cstart vector TOKEN_STRUCTURE_CLOSE
   51 cstart: . TOKEN_CALL
   52       | . cstart d_or_b TOKEN_STRUCTURE_COMMA
   53       | . cstart exp TOKEN_STRUCTURE_COMMA
   54       | . cstart bool TOKEN_STRUCTURE_COMMA
   55       | . cstart vector TOKEN_STRUCTURE_COMMA

    TOKEN_NUMBER          shift, and go to state 1
    TOKEN_VARIABLE        shift, and go to state 2
    TOKEN_CALL            shift, and go to state 3
    TOKEN_FUNCTION        shift, and go to state 4
    TOKEN_FUNCTION_2      shift, and go to state 5
    TOKEN_SIGN            shift, and go to state 6
    TOKEN_LOGICAL_CHOICE  shift, and go to state 20
    TOKEN_STRUCTURE_OPEN  shift, and go to state 21

    d_or_b  go to state 12
    exp     go to state 22
    call    go to state 15
    cstart  go to state 16


State 7

    5 d_or_b: TOKEN_LOGICAL_CHOICE . TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
    6       | TOKEN_LOGICAL_CHOICE . TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
   18 exp: TOKEN_LOGICAL_CHOICE . TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   19    | TOKEN_LOGICAL_CHOICE . TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   21 bool: TOKEN_LOGICAL_CHOICE . TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   22     | TOKEN_LOGICAL_CHOICE . TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   23     | TOKEN_LOGICAL_CHOICE . TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
   24     | TOKEN_LOGICAL_CHOICE . TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   25     | TOKEN_LOGICAL_CHOICE . TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   26     | TOKEN_LOGICAL_CHOICE . TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE

    TOKEN_STRUCTURE_OPEN  shift, and go to state 23


State 8

   20 bool: TOKEN_LOGICAL_VALUE .

    $default  reduce using rule 20 (bool)


State 9

    3 d_or_b: . call
    4       | . TOKEN_VARIABLE
    5       | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
    6       | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
    7 exp: . TOKEN_NUMBER
    8    | . d_or_b
    9    | . exp TOKEN_OPERATOR_PLUS exp
   10    | . exp TOKEN_OPERATOR_MODULUS exp
   11    | . exp TOKEN_OPERATOR_REMAINDER exp
   12    | . exp TOKEN_OPERATOR_MULTIPLY exp
   13    | . exp TOKEN_OPERATOR_POWER exp
   14    | . TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_CLOSE
   15    | . TOKEN_FUNCTION TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_CLOSE
   16    | . TOKEN_FUNCTION_2 TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   17    | . TOKEN_SIGN exp
   18    | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   19    | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   20 bool: . TOKEN_LOGICAL_VALUE
   21     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   22     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   23     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
   24     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   25     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   26     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
   27     | . exp TOKEN_LOGICAL_EQ exp
   28     | . bool TOKEN_LOGICAL_EQ bool
   29     | . exp TOKEN_LOGICAL_NE exp
   30     | . bool TOKEN_LOGICAL_NE bool
   31     | . exp TOKEN_LOGICAL_GE exp
   32     | . exp TOKEN_LOGICAL_GT exp
   33     | . exp TOKEN_LOGICAL_LE exp
   34     | . exp TOKEN_LOGICAL_LT exp
   35     | . bool TOKEN_LOGICAL_OR bool
   36     | . bool TOKEN_LOGICAL_XOR bool
   37     | . bool TOKEN_LOGICAL_AND bool
   38     | . TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_CLOSE
   39     | . TOKEN_LOGICAL_NOT bool
   39     | TOKEN_LOGICAL_NOT . bool
   46 call: . TOKEN_CALL TOKEN_STRUCTURE_CLOSE
   47     | . cstart d_or_b TOKEN_STRUCTURE_CLOSE
   48     | . cstart exp TOKEN_STRUCTURE_CLOSE
   49     | . cstart bool TOKEN_STRUCTURE_CLOSE
   50     | . cstart vector TOKEN_STRUCTURE_CLOSE
   51 cstart: . TOKEN_CALL
   52       | . cstart d_or_b TOKEN_STRUCTURE_COMMA
   53       | . cstart exp TOKEN_STRUCTURE_COMMA
   54       | . cstart bool TOKEN_STRUCTURE_COMMA
   55       | . cstart vector TOKEN_STRUCTURE_COMMA

    TOKEN_NUMBER          shift, and go to state 1
    TOKEN_VARIABLE        shift, and go to state 2
    TOKEN_CALL            shift, and go to state 3
    TOKEN_FUNCTION        shift, and go to state 4
    TOKEN_FUNCTION_2      shift, and go to state 5
    TOKEN_SIGN            shift, and go to state 6
    TOKEN_LOGICAL_CHOICE  shift, and go to state 7
    TOKEN_LOGICAL_VALUE   shift, and go to state 8
    TOKEN_LOGICAL_NOT     shift, and go to state 9
    TOKEN_STRUCTURE_OPEN  shift, and go to state 10

    d_or_b  go to state 12
    exp     go to state 24
    bool    go to state 25
    call    go to state 15
    cstart  go to state 16


State 10

    3 d_or_b: . call
    4       | . TOKEN_VARIABLE
    5       | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
    6       | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
    7 exp: . TOKEN_NUMBER
    8    | . d_or_b
    9    | . exp TOKEN_OPERATOR_PLUS exp
   10    | . exp TOKEN_OPERATOR_MODULUS exp
   11    | . exp TOKEN_OPERATOR_REMAINDER exp
   12    | . exp TOKEN_OPERATOR_MULTIPLY exp
   13    | . exp TOKEN_OPERATOR_POWER exp
   14    | . TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_CLOSE
   14    | TOKEN_STRUCTURE_OPEN . exp TOKEN_STRUCTURE_CLOSE
   15    | . TOKEN_FUNCTION TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_CLOSE
   16    | . TOKEN_FUNCTION_2 TOKEN_STRUCTURE_OPEN exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   17    | . TOKEN_SIGN exp
   18    | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   19    | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_COMMA exp TOKEN_STRUCTURE_CLOSE
   20 bool: . TOKEN_LOGICAL_VALUE
   21     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   22     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   23     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
   24     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   25     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_CLOSE
   26     | . TOKEN_LOGICAL_CHOICE TOKEN_STRUCTURE_OPEN d_or_b TOKEN_STRUCTURE_COMMA bool TOKEN_STRUCTURE_COMMA d_or_b TOKEN_STRUCTURE_CLOSE
   27     | . exp TOKEN_LOGICAL_EQ exp
   28     | . bool TOKEN_LOGICAL_EQ bool
   29     | . exp TOKEN_LOGICAL_NE exp
   30     | . bool TOKEN_LOGICAL_NE bool
   31     | . exp TOKEN_LOGICAL_GE exp
   32     | . exp TOKEN_LOGICAL_GT exp
   33     | . exp TOKEN_LOGICAL_LE exp
   34     | . exp TOKEN_LOGICAL_LT exp
   35     | . bool TOKEN_LOGICAL_OR bool
   36     | . bool TOKEN_LOGICAL_XOR bool
   37     | . bool TOKEN_LOGICAL_AND bool
   38     | . TOKEN_STRUCTURE_OPEN bool TOKEN_STRUCTURE_CLOSE
   38     | TOKEN_STRUCTURE_OPEN . bool TOKEN_STRUCTURE_CLOSE
   39     | . TOKEN_LOGICAL_NOT bool
   46 call: . TOKEN_CALL TOKEN_STRUCTURE_CLOSE
   47     | . cstart d_or_b TOKEN_STRUCTURE_CLOSE
   48     | . cstart exp TOKEN_STRUCTURE_CLOSE
   49     | . cstart bool TOKEN_STRUCTURE_CLOSE
   50     | . cstart vector TOKEN_STRUCTURE_CLOSE
   51 cstart: . TOKEN_CALL
   52       | . cstart d_or_b TOKEN_STRUCTURE_COMMA
   53       | . cstart exp TOKEN_STRUCTURE_COMMA
   54       | . cstart bool TOKEN_STRUCTURE_COMMA
   55       | . cstart vector TOKEN_STRUCTURE_COMMA

    TOKEN_NUMBER          shift, and go to state 1
    TOKEN_VARIABLE        shift, and go to state 2
    TOKEN_CALL            shift, and go to state 3
    TOKEN_FUNCTION        shift, and go to state 4
    TOKEN_FUNCTION_2      shift, and go to state 5
    TOKEN_SIGN            shift, and go to state 6
    TOKEN_LOGICAL_CHOICE  shift, and go to state 7
    TOKEN_LOGICAL_VALUE   shift, and go to state 8
    TOKEN_LOGICAL_NOT     shift, and go to state 9
    TOKEN_STRUCTURE_OPEN  shift, and go to state 10

    d_or_b  go to state 12
    exp     go to state 26
    bool    go to state 27
    call    go to state 15
    cstart  go to state 16


State 11

    0 $accept: result . $end

    $end  shift, and go to state 28


State 12

    8 exp: d_or_b .

    $default  reduce using rule 8 (exp)


State 13

    1 result: exp .  [$end]
    9 exp: exp . TOKEN_OPERATOR_PLUS exp
   10    | exp . TOKEN_OPERATOR_MODULUS exp
   11    | exp . TOKEN_OPERATOR_REMAINDER exp
   12    | exp . TOKEN_OPERATOR_MULTIPLY exp
   13    | exp . TOKEN_OPERATOR_POWER exp
   27 bool: exp . TOKEN_LOGICAL_EQ exp
   29     | exp . TOKEN_LOGICAL_NE exp
   31     | exp . TOKEN_LOGICAL_GE exp
   32     | exp . TOKEN_LOGICAL_GT exp
   33     | exp . TOKEN_LOGICAL_LE exp
   34     | exp . TOKEN_LOGICAL_LT exp

    TOKEN_OPERATOR_POWER      shift, and go to state 29
    TOKEN_OPERATOR_MULTIPLY   shift, and go to state 30
    TOKEN_OPERATOR_MODULUS    shift, and go to state 31
    TOKEN_OPERATOR_REMAINDER  shift, and go to state 32
    TOKEN_OPERATOR_PLUS       shift, and go to state 33
    TOKEN_LOGICAL_EQ          shift, and go to state 34
    TOKEN_LOGICAL_NE          shift, and go to state 35
    TOKEN_LOGICAL_GT          shift, and go to state 36
    TOKEN_LOGICAL_GE          shift, and go to state 37
    TOKEN_LOGICAL_LT          shift, and go to state 38
    TOKEN_LOGICAL_LE          shift, and go to state 39
